--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch ./src/index.js",
-    "start": "./src/node index.js"
+    "dev": "node --watch ./index.js",
+    "start": "./node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,10 @@
   },
   "homepage": "https://github.com/Maxo1980/tp_rd_integrador#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4"
   }
-  
 }
-
