--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 //config del server
 PUERTO=3000
 
-//config del correo
-CORREO=''
-CLAVE=''
+//config del correo //pass de la cuenta: uner2024 
+CORREO='integradoruner@gmail.com' 
+CLAVE='aqyj gviv bujk ebnf'
 
 //config de la base de datos
 DBNAME=''
