Reestructuracion de proyecto con buenas practicas, se añade un nuevo user a la db con solo privilegios en la db del integrador

--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ CORREO='integradoruner@gmail.com'
 CLAVE='aqyj gviv bujk ebnf'
 
 //config de la base de datos
-DBNAME=''
-USER=''
-PASS=''
+HOST='localhost'
+DBNAME='rd_tp_integrador'
+USER='integrador'
+PASS='TPintegradorProg3&'
 
