--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "node --watch ./src/index.js",
-    "start": "node index2.js"
+    "start": "node src /index.js"
   },
   "repository": {
     "type": "git",
